# wotw

./: .gitignore  ReadMe.md  pyproject.toml
src/wotw/: inotify.py  readdirectorychanges.py  watch.py
src/wotw/win32/: create_file.py  notify_info.py  readdirectorychanges.py
tests/: test_inotify.py  test_rdc.py
