[tool.poetry]
name = "wotw"
version = "0.1.0"
description = "Watcher On The Wall watches directories for changes"
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
readme = "ReadMe.md"
license = "Apache-2.0"

packages = [
    { include = "wotw", from = "src" },
    { include = "wotw/py.typed", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.isort]
profile = "black"
lines_between_sections = 1

[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
